--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
   font-family: "Poppins", sans-serif;
 }
 
-
 .hero-img {
   position: relative;
   animation: imgAnimation 2s linear infinite alternate;
@@ -176,74 +175,7 @@
   text-align: start;
 }
 
-.services {
-  background: #f8f8f8;
-}
-
-.service {
-  padding: 10px;
-}
-
-.service-content {
-  background-color: #fff;
-  box-shadow: 2px 2px 30px rgba(34, 34, 34, 0.2);
-  padding: 2rem;
-  cursor: pointer;
-  transition: 0.3s ease-out;
-}
-
-.service-content:hover {
-  transform: translateY(-5px);
-}
-
-.service-title {
-  margin-top: 10px;
-}
-
-.service-title h3 {
-  color: rgba(1, 82, 152);
-  font-size: 1rem;
-}
-
-.service-content p {
-  color: #444;
-  font-size: 15px;
-  transition: 0.3s ease-out;
-}
-
-.card {
-  box-shadow: 2px 2px 30px rgba(34, 34, 34, 0.2);
-  border: none;
-  background-color: #fff;
-  cursor: pointer;
-  transition: 0.3s ease-out;
-  padding: 2rem;
-  margin: 1rem 0;
-}
-
-.card:hover {
-  transform: translateY(-5px);
-}
-
-.card p {
-  color: rgba(1, 82, 152);
-}
-
-.footer {
-  padding-top: 20px;
-  justify-content: center;
-}
-
-.footer h4 {
-  color: rgba(1, 82, 152);
-  font-weight: 600;
-  font-size: 2rem;
-}
-
-.footer ul li {
-  list-style: none;
-  padding: 0;
-}
+/* Links Section */
 
 .links-list-content {
   padding: 0 0 1rem;
@@ -337,7 +269,12 @@
   cursor: pointer;
 }
 
-
+@media screen and (max-width: 480px) {
+  .links-list-content {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
 
 /* services section */
 .services-content-main {
@@ -347,7 +284,7 @@
 .services-content-main h1 {
   font-size: 4rem;
   font-weight: 800;
-  color: #001C30;
+  color: #001c30;
   text-align: center;
 }
 
@@ -357,24 +294,20 @@
 
 .services-row-contents .tabcontent {
   display: none;
-
 }
 
 .services-row-contents .tabcontent h3 {
   font-weight: 800;
   font-size: 3rem;
   color: rgb(8, 138, 252);
-
 }
 
 .services-row-contents .tabcontent p {
   margin-top: 1rem;
   font-size: 15px;
   font-weight: 400;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-
-
 
 .services-row-contents {
   padding: 3rem;
@@ -382,11 +315,10 @@
 
 .services-row-contents .tab {
   margin-bottom: 2rem;
-  border-left: 2px solid #001C30;
-  border-right: 2px solid #001C30;
+  border-left: 2px solid #001c30;
+  border-right: 2px solid #001c30;
   padding-left: 1rem;
   padding-right: 1rem;
-
 }
 
 .services-row-contents .tablinks {
@@ -400,7 +332,6 @@
 
 .services-row-contents .tablinks.active {
   border-bottom: 1px solid #222;
-
 }
 
 .services-row-contents .tabcontent img {
@@ -408,12 +339,12 @@
 }
 
 .services-row-contents #defaultOpen {
-  color: #001C30;
+  color: #001c30;
   font-weight: 800;
 }
 
 .checklist {
-  background-color: #001C30;
+  background-color: #001c30;
   padding: 2rem 1rem;
 }
 
@@ -428,7 +359,6 @@
   text-decoration: underline;
 }
 
-
 @media screen and (max-width: 480px) {
   .tab {
     display: flex;
@@ -437,10 +367,10 @@
   }
 
   .services-row-contents .tabcontent h3 {
-    font-size: 20px; 
+    font-size: 20px;
   }
   .tabcontent .checklist {
-    max-width: 390px; 
+    max-width: 390px;
     margin: 0 auto;
     padding: 0;
   }
@@ -448,6 +378,3 @@
     font-size: 10px;
   }
 }
-
-
-
